--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+<meta http-equiv="Content-Security-Policy" content="img-src * 'self' data: https:">
+</head>
 <body>
 <h1>Hello</h1>
 </body>
