--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="One Page Responsive HTML Resume Template">
     <meta name="keywords" content="onepage, resume, CV HTML template, personal Vcard, html resume, free resume template, free HTML template, free bootstrap template, personal portfolio, free html portfolio">
-    <meta name="author" content="http://ttvu.github.io/">
+    <meta name="author" content="https://ttvu.github.io/">
     <title>Thanh Vu - Engineering Physical</title>
     <!-- Web Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <!-- Font Awesome CSS -->
@@ -610,7 +610,7 @@
     <script src="assets/js/jquery.easypiechart.js"></script>
     <script src="assets/js/jquery.shuffle.min.js"></script>
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
+    <script src="https://a.vimeocdn.com/js/froogaloop2.min.js"></script>
     <script src="assets/js/jquery.fitvids.js"></script>
     <script src="assets/js/scripts.js"></script>
 </body>
